--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@
 .watermark {
   -webkit-text-stroke: 1px var(--background-color);
   text-stroke: 1px var(--background-color);
+  text-shadow: none;
 }
 }
 
@@ -53,6 +54,8 @@
   border: 2px solid var(--accent-Color);
   color: var(--accent-Color);
   margin-block-start: 102px;
+  margin-block-end: 100px;
+  padding: 10px;
 }
 
 .header__a {
@@ -99,7 +102,6 @@
 
 .theme-menu__button:hover {
   cursor: pointer;
-  transition: all 0.3s ease;
   opacity: 0.6;
 }
 
@@ -116,6 +118,7 @@
 .theme-menu__button:disabled:before {
   content: "▶";
   position: absolute;
+  top: 0px;
   right: 96px;
   animation: arrow 0.5s infinite ease-in-out alternate;
 }
@@ -142,21 +145,22 @@
   width: max(372px, 48.3%);
   border: 2px solid var(--accent-Color);
   background-color: var(--background-color);
-  margin-block-start: 103px;
-  margin-block-end: -52px;
+  margin-block-end: 50px;
+  
 }
 
 .title__card {
   font-family: var(--variables_font-family);
   font-size: 18px;
-  font-weight: var(--title_font-weight);
+  font-variation-settings: var(--title_font-weight);
   color: var(--accent-Color);
   padding-inline-start: 10px;
-  padding-block-start: 5px;
+  padding-block: 5px;
 }
 
 .image__card {
   position: relative;
+  overflow: hidden;
 }
 
 .watermark {
@@ -175,7 +179,8 @@
 }
 
 .image {
-  width: 100%;
+  display: block;
+  width: 152%;
   object-fit: cover;
   object-position: center;
 }
@@ -183,23 +188,9 @@
 .text {
   font-family: var(--variables_font-family);
   font-size: 18px;
-  font-weight: var(--text_font-weight);
+  font-variation-settings: var(--text_font-weight);
   color: var(--accent-Color);
-  margin: 25px;
-}
-
-.button__card {
-  display: flex;
-  justify-content: end;
-  align-items: end;
-  gap: 6px;
-  margin: 0 25px 25px 0;
-}
-
-.button__text {
-  mix-blend-mode: difference;
-  color: var(--button-color);
-  z-index: 2;
+  margin: 24px 25px 25px 25px;
 }
 
 .card__icon-button {
@@ -229,23 +220,6 @@
   transition: fill 0.3s linear 0.05s;
 }
 
-.like-icon {
-  width: 39px;
-  height: 36px;
-  outline: none;
-  border: none;
-  background-color: transparent;
-}
-
-.contour {
-  fill: var(--accent-Color);
-}
-
-.main-body {
-  fill: var(--heart-none-color);
-  transition: fill 0.3s linear;
-}
-
 .card__icon-button:hover .main-body {
   fill: var(--accent-Color);
   transition: fill 0.3s linear 0.05s;
@@ -254,11 +228,6 @@
 .card__icon-button:active .main-body {
   fill: var(--heart-color-body);
   transition: fill 0.3s linear 0.05s;
-}
-
-.core {
-  fill: var(--heart-color-body);
-  transition: fill 0.3s linear 0.03s;
 }
 
 .card__icon-button:hover .core {
@@ -271,10 +240,6 @@
   transition: fill 0.3s linear;
 }
 
-.sparks {
-  fill: var(--heart-color-body);
-  opacity: 0;
-}
 
 .like-icon.is-liked .main-body {
   fill: var(--heart-color-body);
@@ -299,6 +264,29 @@
   animation: like-spark 0.3s ease-in 0.3s alternate;
 }
 
+.like-icon {
+  width: 39px;
+  height: 36px;
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
+.button__card {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 6px;
+  margin: 0 25px 25px 0;
+}
+
+.button__text {
+  mix-blend-mode: difference;
+  color: var(--button-color);
+  z-index: 2;
+}
+
+
 .floppy {
   width: 28px;
   height: 28px;
@@ -309,8 +297,8 @@
  background-size: cover;
 }
 
-.card__like-button,
-.ok {
+/*.card__like-button,
+.ok*/ .button {
   position: relative;
   display: flex;
   justify-content: center;
@@ -324,20 +312,20 @@
   color: var(--accent-Color);
   padding: 9px 34px;
   cursor: pointer;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out; 
+  transition: box-shadow 0.3s ease-in-out; 
 }
 
-.card__like-button:focus,
+/*.card__like-button:focus,
 .save__button:focus,
-.ok:focus {
+.ok:focus*/ .button:focus {
   outline: none;
   box-shadow: 2px 2px 0px 0px var(--accent-Color);
-  transition: box-shadow 0.3s ease-in-out;
 }
 
-.card__like-button:before,
+/*.card__like-button:before,
 .save__button:before,
-.ok:before {
+.ok:before*/ .button::before {
   content: '';
   position: absolute;
   display: block;
@@ -350,16 +338,13 @@
   transition: 0.5s ease-in-out;
 }
 
-.card__like-button:hover:before,
+/*.card__like-button:hover:before,
 .save__button:hover:before,
-.ok:hover:before {
+.ok:hover:before*/ .button:hover::before {
   transform: scalex(1);
   width: 100%;
 }
 
-.footer{
-  margin-block-start: 101px;
-}
 
 .save__button {
   cursor: pointer;
@@ -374,8 +359,9 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 90%;
-  padding: 16px 21px;
+  padding: 14px 20px;
   transition: all 0.5s;
+  margin: 3px auto 80px;
 }
 
 .floppy {
@@ -384,11 +370,13 @@
   color: var(--button-color);
   stroke: var(--button-color);
   fill: var(--accent-Color);
+  width: 24px;
+  height: 21px;
 }
 
 .window {
   width: 357px;
-  height: 195px;
+  min-height: 195px;
   font-family: var(--regular_font-family);
   background-color: var(--background-color);
   font-size: 14px;
@@ -429,34 +417,35 @@
 }
 
 dialog::backdrop {
-  background-color: rgb(0 0 0 / 0.8);
+  background-color: rgba(0, 0, 0, 1);
+  opacity: 0.75;
 }
 
-.img2 {
+.filter_saturate {
   filter: saturate(30%);
 }
 
-.img3 {
+.filter_contrast {
   filter: saturate(500%) contrast(100%) brightness(100%);
 }
 
-.img4 {
+.filter_hue-rotate {
   filter: saturate(200%) grayscale(50%) hue-rotate(25deg) sepia(30%) contrast(100%) brightness(100%);
 }
 
-.img5 {
+.filter_brightness {
   filter: saturate(220%) invert(60%) contrast(200%) brightness(120%);
 }
 
-.img6 {
+.filter_sepia {
   filter: saturate(30%) sepia(60%) invert(20%) grayscale(50%) contrast(200%);
 }
 
-.img7 {
+.filter_blur {
   filter: saturate(80%) blur(5px);
 }
 
-.img8 {
+.filter_mix {
   filter: saturate(61%) invert(35%) contrast(155%) hue-rotate(142deg) brightness(112%) sepia(39.6)
 }
 
@@ -467,25 +456,36 @@ dialog::backdrop {
   }
   
   .header {
-    height: 323px;
+    min-height: 323px;
+    margin-block-end: 101px;
   }
 
   .header__a {
-    margin-block-start: 113px;
+    margin-block-start: 108px;
+  }
+
+  .watermark {
+    right: 10px;
+    top: 26px
+  }
+
+  .card {
+    margin-block-end: 48px;
   }
 
   .save__button {
     flex-direction: column;
     width: 306px;
-    gap: 0;
-    padding: 15px;
+    height: 80px;
+    padding: 10px 0;
     justify-content: space-between; 
+    margin: 5px auto 80px;
 }
 
   .floppy {
-    width: 28px;
-    height: 31px;
-    margin-bottom: 8px;
+    width: 30px;
+    height: 30px;
+    
   }
 
   .text__card {
