--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,7 +5,7 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
-.theme-dark {
+:root.theme-dark {
     --button-color: #00cc14;
     --accent-Color: #00CC14;
     --background-color: #000;
@@ -33,7 +33,7 @@
     }
 }
 
-.theme-light {
+:root.theme-light {
     --button-color: #FFF;
     --accent-Color: #000;
     --background-color: #FFF;
