--- a/styles/animations.css
+++ b/styles/animations.css
@@ -31,6 +31,50 @@
 .contour {
     fill: var(--accent-Color);
 }
+
+.card__icon-button:hover .main-body {
+    fill: var(--accent-Color);
+    transition: fill 0.3s linear 0.05s;
+}
+
+.card__icon-button:active .main-body {
+    fill: var(--heart-color-body);
+    transition: fill 0.3s linear 0.05s;
+}
+
+.card__icon-button:hover .core {
+    fill: var(--accent-Color);
+    transition: fill 0.3s linear;
+}
+
+.card__icon-button:active .core {
+    fill: var(--heart-color-body);
+    transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+    fill: var(--heart-color-body);
+    transition: fill 0.3s linear 0.05s; 
+}
+
+.like-icon.is-liked .core { 
+    fill: var(--heart-color-body);
+    transition: fill 0.3s linear; 
+}
+
+.like-icon.is-liked .contour { 
+    fill: var(--heart-color-body);
+    transition: fill 0.3s linear 0.06s; 
+}
+
+.is-liked .heart {
+    animation: like-skale 0.3s ease-in 0.1s alternate;
+}
+
+.is-liked .sparks {
+    animation: like-spark 0.3s ease-in 0.3s alternate;
+}
+  
   
 @keyframes arrow {
     0% {
